concept almost done

--- a/schriftliche ausarbeitung/bib.bib
+++ b/schriftliche ausarbeitung/bib.bib
@@ -55,3 +55,30 @@
   journal = {JOURNAL OF THE AMERICAN SOCIETY FOR INFORMATION SCIENCE.},
   year = {1990}
 }
+
+@MISC{wikiCosineSimilarity,
+  author = {Wikipedia},
+  title = {Cosine Similarity},
+  year = {27 March 2013 at 10:24}
+}
+
+@ARTICLE{historyOfSVD,
+  author = {G. W. Stewart},
+  title = {On the Early History of the Singular Value Decomposition},
+  journal = {SIAM Review},
+  year = {1993}
+}
+
+@Book{numericalLinearAlgebra,
+  title = {Numerical Linear Algebra},
+  publisher = {Springer},
+  year = {2008},
+  author = {Allaire, Grégoire and Kaber, Sidi Mahmoud}
+}
+
+@Book{matrixAlgorithms,
+  title = {Matrix algorithms: Volume 1, Basic decompositions},
+  publisher = {Society for Industrial and Applied Mathematics},
+  year = {1998},
+  author = {Stewart, Gilbert W.}
+}
