get prefLabels from text

--- a/schriftliche ausarbeitung/diplomarbeit.tex
+++ b/schriftliche ausarbeitung/diplomarbeit.tex
@@ -1772,10 +1772,15 @@ The following table outlines the results from the different recommendation syste
 
 %Evaluating Collaborative Filtering Recommender Systems
 %JONATHAN L. HERLOCKER
-% Finally, there is a significant challenge in deciding what combination of mea- sures to use in comparative evaluation. We have noticed a trend recently¿many researchers find that their newest algorithms yield a mean absolute error of 0.73 (on a five-point rating scale) on movie rating datasets. Though the new al- gorithms often appear to do better than the older algorithms they are compared to, we find that when each algorithm is tuned to its optimum, they all produce similar measures of quality. We¿and others¿have speculated that we may be reaching some ¿magic barrier¿ where natural variability may prevent us from getting much more accurate. In support of this, Hill et al. [1995] have shown
+% Finally, there is a significant challenge in deciding what combination of mea- sures to use in comparative evaluation.
+%We have noticed a trend recently many researchers find that their newest algorithms yield a mean absolute error of 0.73 (on a five-point rating scale) on movie rating datasets.
+%Though the new al- gorithms often appear to do better than the older algorithms they are compared to, we find that when each algorithm is tuned to its optimum, they all produce similar measures of quality.
+%We -and others- have speculated that we may be reaching some magic barrier where natural variability may prevent us from getting much more accurate.
+%In support of this, Hill et al. [1995] have shown
 % ACM Transactions on Information Systems, Vol. 22, No. 1, January 2004.
-% Evaluating Collaborative Filtering Recommender Systems ¿ 7
-% that users provide inconsistent ratings when asked to rate the same movie at different times. They suggest that an algorithm cannot be more accurate than the variance in a user¿s ratings for the same item.
+% Evaluating Collaborative Filtering Recommender Systems 7
+% that users provide inconsistent ratings when asked to rate the same movie at different times.
+%They suggest that an algorithm cannot be more accurate than the variance in a user's ratings for the same item.
 
 
 % \subsubsection{Item-Based}
