lots of thesis writing

--- a/schriftliche ausarbeitung/bib.bib
+++ b/schriftliche ausarbeitung/bib.bib
@@ -82,3 +82,13 @@
   year = {1998},
   author = {Stewart, Gilbert W.}
 }
+
+@ARTICLE{Herlocker04evaluatingcollaborative,
+    author = {Jonathan L. Herlocker and Joseph A. Konstan and Loren G. Terveen and John and T. Riedl},
+    title = {Evaluating collaborative filtering recommender systems},
+    journal = {ACM Transactions on Information Systems},
+    year = {2004},
+    volume = {22},
+    pages = {5--53}
+}
+
